<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_CraneMode" Id="{99d1ad3b-9893-4d90-8baa-5da723cc97a1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CraneMode :
(
	Manual,
	Automatic
) INT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>