<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="Inputs" Id="{e951088c-709d-404f-bb3e-4c135570158d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fManualCylinderPositionReference : LREAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>